--- a/pages/1239.html
+++ b/pages/1239.html
@@ -754,11 +754,23 @@ margin-left: 0em;
 </li>
 
 <li>
+<p><a class="existingWikiWord" href="/nlab/show/representation+ring">representation ring</a></p>
+</li>
+
+<li>
+<p><a class="existingWikiWord" href="/nlab/show/irreducible+representation">irreducible representation</a></p>
+</li>
+
+<li>
 <p><a class="existingWikiWord" href="/nlab/show/Schur%27s+lemma">Schur's lemma</a></p>
 </li>
 
 <li>
 <p><a class="existingWikiWord" href="/nlab/show/Young+diagram">Young diagram</a></p>
+</li>
+
+<li>
+<p><span class="newWikiWord">Schur index<a href="/nlab/new/Schur+index">?</a></span></p>
 </li>
 
 <li>
@@ -851,14 +863,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 24, 2018 at 11:32:36.
+  Last revised on September 27, 2018 at 04:23:54.
   See the <a href="https://ncatlab.org/nlab/history/representation theory" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/representation+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/representation+theory/21" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(21 revisions)</span> | <a href="/nlab/show/diff/representation+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/representation+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/representation+theory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/representation+theory/22" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(22 revisions)</span> | <a href="/nlab/show/diff/representation+theory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/representation+theory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/representation theory/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
