--- a/pages/19724.html
+++ b/pages/19724.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      coprime integers in nLab
+      multiplicative group of integers modulo n in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -284,7 +284,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      coprime integers
+      multiplicative group of integers modulo n
   </h1>
 
 
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/9052/#Item_1" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -424,12 +424,21 @@ margin-left: 0em;
 
 <h2 id="definition">Definition</h2>
 
-<p>A collection of <a class="existingWikiWord" href="/nlab/show/integers">integers</a> is called <em>coprime</em> or <em>relatively prime</em> if the only common <a class="existingWikiWord" href="/nlab/show/prime+factor">prime factor</a> is 1.</p>
+<p>For <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi><mo>∈</mo><mi>ℕ</mi></mrow><annotation encoding="application/x-tex">n \in \mathbb{N}</annotation></semantics></math>, the <a class="existingWikiWord" href="/nlab/show/group+of+units">group of units</a> of the <a class="existingWikiWord" href="/nlab/show/ring">ring</a> of <a class="existingWikiWord" href="/nlab/show/integers">integers</a> modulo <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math></p>
+<div class="maruku-equation"><math xmlns="http://www.w3.org/1998/Math/MathML" display="block" class="maruku-mathml"><semantics><mrow><msup><mrow><mo>(</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mi>n</mi><mo>)</mo></mrow> <mo>×</mo></msup></mrow><annotation encoding="application/x-tex">
+  \left(
+    \mathbb{Z}/n
+  \right)^\times
+
+</annotation></semantics></math></div>
+<p>is typically called the <em>multiplicative group of integers modulo <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math></em>.</p>
+
+<p>This consists of all those elements <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>k</mi><mo>∈</mo><mi>ℤ</mi><mo stretchy="false">/</mo><mi>n</mi></mrow><annotation encoding="application/x-tex">k \in \mathbb{Z}/n</annotation></semantics></math> which are represented by <a class="existingWikiWord" href="/nlab/show/coprime+integers">coprime integers</a> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>n</mi></mrow><annotation encoding="application/x-tex">n</annotation></semantics></math>.</p>
 
 <h2 id="related_concepts">Related concepts</h2>
 
 <ul>
-<li><a class="existingWikiWord" href="/nlab/show/multiplicative+group+of+integers+modulo+n">multiplicative group of integers modulo n</a></li>
+<li><a class="existingWikiWord" href="/nlab/show/cyclic+group">cyclic group</a></li>
 </ul>
 
 <h2 id="references">References</h2>
@@ -437,7 +446,7 @@ margin-left: 0em;
 <p>See also</p>
 
 <ul>
-<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Coprime_integers">Coprime integers</a></em></li>
+<li>Wikipedia, <em><a href="https://en.wikipedia.org/wiki/Multiplicative_group_of_integers_modulo_n">Multiplicative group of integers modulo n</a></em></li>
 </ul>
 </body></html>
 
@@ -445,22 +454,22 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 04:55:41.
-  See the <a href="https://ncatlab.org/nlab/history/coprime integers" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  Created on September 27, 2018 at 04:59:38.
+  See the <a href="https://ncatlab.org/nlab/history/multiplicative group of integers modulo n" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/coprime+integers" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/coprime+integers/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/coprime+integers" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/coprime+integers" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  | <a href="https://ncatlab.org/nlab/show/coprime integers/cite" style="color: black">Cite</a>
+  <a href="/nlab/edit/multiplicative+group+of+integers+modulo+n" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  | <a href="https://ncatlab.org/nlab/show/multiplicative group of integers modulo n/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
-    <a href="/nlab/print/coprime+integers" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/multiplicative+group+of+integers+modulo+n" accesskey="p" id="view_print" rel="nofollow">Print</a>
     |
-    <a href="/nlab/tex/coprime+integers" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/multiplicative+group+of+integers+modulo+n" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/coprime+integers" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/multiplicative+group+of+integers+modulo+n" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
