--- a/pages/6224.html
+++ b/pages/6224.html
@@ -419,7 +419,7 @@ margin-left: 0em;
 
 <p>Every nilpotent group is an example of a <a class="existingWikiWord" href="/nlab/show/solvable+group">solvable group</a> (indeed, the groups in the <a class="existingWikiWord" href="/nlab/show/lower+central+series">lower central series</a> of any group can be term-wise included into its <a class="existingWikiWord" href="/nlab/show/derived+series">derived series</a>).</p>
 
-<p>Every finite nilpotent group, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>, is the <a class="existingWikiWord" href="/nlab/show/direct+product">direct product</a> of its <a class="existingWikiWord" href="/nlab/show/Sylow+p-subgroups">Sylow p-subgroups</a>, each of which is a <a class="existingWikiWord" href="/nlab/show/normal+subgroup">normal subgroup</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>G</mi></mrow><annotation encoding="application/x-tex">G</annotation></semantics></math>.</p>
+<p>The <a class="existingWikiWord" href="/nlab/show/Sylow+p-subgroups">Sylow p-subgroups</a> of any nilpotent group are <a class="existingWikiWord" href="/nlab/show/normal+subgroup">normal</a>. The direct product of these subgroups in such a group is its <a class="existingWikiWord" href="/nlab/show/torsion+subgroup">torsion subgroup</a>.</p>
 
 <h2 id="examples">Examples</h2>
 
@@ -490,14 +490,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 26, 2018 at 17:43:54.
+  Last revised on September 27, 2018 at 04:04:37.
   See the <a href="https://ncatlab.org/nlab/history/nilpotent group" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/nilpotent+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nilpotent+group/7" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(7 revisions)</span> | <a href="/nlab/show/diff/nilpotent+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nilpotent+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/nilpotent+group" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nilpotent+group/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/nilpotent+group" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nilpotent+group" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/nilpotent group/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
