--- a/pages/17716.html
+++ b/pages/17716.html
@@ -294,7 +294,7 @@ margin-left: 0em;
     <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
     <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
     <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
-    <a href="https://nforum.ncatlab.org/discussion/8689/#Item_3" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="https://nforum.ncatlab.org/discussion/8689/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
     <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
@@ -528,7 +528,9 @@ margin-left: 0em;
 
 <li><a class="existingWikiWord" href="/nlab/show/enriched+category+theory">enriched category theory</a></li>
 </ul><div>
-<p><a href="/nlab/edit/higher+category+theory+-+contents">Edit this sidebar</a></p>
+<p>
+  <a href="/nlab/edit/higher+category+theory+-+contents">Edit this sidebar</a>
+</p>
 </div></div>
 
 <h4 id="homotopy_theory">Homotopy theory</h4>
@@ -742,7 +744,13 @@ margin-left: 0em;
 </div>
 
 <h1 id="contents">Contents</h1>
-<div class="maruku_toc"><ul><li><a href="#idea">Idea</a></li><li><a href="#references">References</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#idea'>Idea</a></li>
+<li><a href='#references'>References</a></li>
+</ul>
+</div>
+
 <h2 id="idea">Idea</h2>
 
 <p>This entry relates to a series of papers, beginning with <a href="#PHCTIntro">Barwick-Dotto-Glasman-Nardin-Shah 16</a> which aim to provide common foundations for several different parts of <a class="existingWikiWord" href="/nlab/show/homotopy+theory">homotopy theory</a>, among which <a class="existingWikiWord" href="/nlab/show/equivariant+homotopy+theory">equivariant homotopy theory</a>, <a class="existingWikiWord" href="/nlab/show/parametrized+homotopy+theory">parametrized homotopy theory</a>, <a class="existingWikiWord" href="/nlab/show/global+homotopy+theory">global homotopy theory</a> and <a class="existingWikiWord" href="/nlab/show/Goodwillie+calculus">Goodwillie calculus</a>.</p>
@@ -814,7 +822,7 @@ margin-left: 0em;
 <p><a class="existingWikiWord" href="/nlab/show/Clark+Barwick">Clark Barwick</a>, Emanuele Dotto, <a class="existingWikiWord" href="/nlab/show/Saul+Glasman">Saul Glasman</a>, <a class="existingWikiWord" href="/nlab/show/Denis+Nardin">Denis Nardin</a>, <a class="existingWikiWord" href="/nlab/show/Jay+Shah">Jay Shah</a>, <em>Parametrized higher category theory and higher algebra: Exposé I – Elements of parametrized higher category theory</em>, (<a href="https://arxiv.org/abs/1608.03657">arXiv:1608.03657</a>)</p>
 </li>
 
-<li>
+<li id="Shah18">
 <p><a class="existingWikiWord" href="/nlab/show/Jay+Shah">Jay Shah</a>, <em>Parametrized higher category theory and higher algebra: Exposé II - Indexed homotopy limits and colimits</em>, (<a href="https://arxiv.org/abs/1809.05892">arXiv:1809.05892</a>)</p>
 </li>
 
@@ -834,14 +842,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 18, 2018 at 03:38:30.
+  Last revised on September 28, 2018 at 03:43:34.
   See the <a href="https://ncatlab.org/nlab/history/Parametrized Higher Category Theory and Higher Algebra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Parametrized+Higher+Category+Theory+and+Higher+Algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Parametrized+Higher+Category+Theory+and+Higher+Algebra/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/Parametrized+Higher+Category+Theory+and+Higher+Algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Parametrized+Higher+Category+Theory+and+Higher+Algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Parametrized+Higher+Category+Theory+and+Higher+Algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Parametrized+Higher+Category+Theory+and+Higher+Algebra/13" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(13 revisions)</span> | <a href="/nlab/show/diff/Parametrized+Higher+Category+Theory+and+Higher+Algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Parametrized+Higher+Category+Theory+and+Higher+Algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Parametrized Higher Category Theory and Higher Algebra/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
