--- a/pages/19470.html
+++ b/pages/19470.html
@@ -500,7 +500,7 @@ margin-left: 0em;
 
 <p>The <a class="existingWikiWord" href="/nlab/show/2-category">2-category</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Adj</mi></mrow><annotation encoding="application/x-tex">Adj</annotation></semantics></math> is the free adjunction (<a class="existingWikiWord" href="/nlab/show/walking">walking</a> adjunction).</p>
 
-<p>A <a class="existingWikiWord" href="/nlab/show/2-functor">2-functor</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Adj</mi><mo>→</mo><mi>K</mi></mrow><annotation encoding="application/x-tex">Adj \to K</annotation></semantics></math> is an <a class="existingWikiWord" href="/nlab/show/adjunction">adjunction</a> in the 2-category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>. These 2-functors form the <a class="existingWikiWord" href="/nlab/show/2-category+of+adjunctions">2-category of adjunctions</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>.</p>
+<p>A <a class="existingWikiWord" href="/nlab/show/2-functor">2-functor</a> <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Adj</mi><mo>→</mo><mi>K</mi></mrow><annotation encoding="application/x-tex">Adj \to K</annotation></semantics></math> is an <a class="existingWikiWord" href="/nlab/show/adjunction">adjunction</a> in the 2-category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>. These 2-functors form one version of the <a class="existingWikiWord" href="/nlab/show/2-category+of+adjunctions">2-category of adjunctions</a> of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>.</p>
 
 <h2 id="definition">Definition</h2>
 
@@ -520,7 +520,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>The restrictions of the free adjunction, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Adj</mi></mrow><annotation encoding="application/x-tex">Adj</annotation></semantics></math>, to the sub-2-categories spanned by one endpoint, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi></mrow><annotation encoding="application/x-tex">a</annotation></semantics></math>, or the other, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>b</mi></mrow><annotation encoding="application/x-tex">b</annotation></semantics></math>, define the free monad and the free comonad.</p>
+<p>The restrictions of the free adjunction, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Adj</mi></mrow><annotation encoding="application/x-tex">Adj</annotation></semantics></math>, to the sub-2-categories spanned by one endpoint, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>a</mi></mrow><annotation encoding="application/x-tex">a</annotation></semantics></math>, or the other, <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>b</mi></mrow><annotation encoding="application/x-tex">b</annotation></semantics></math>, define the free <a class="existingWikiWord" href="/nlab/show/monad">monad</a> and the free <a class="existingWikiWord" href="/nlab/show/comonad">comonad</a>.</p>
 
 <h2 id="references">References</h2>
 
@@ -547,14 +547,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 13:48:07.
+  Last revised on September 28, 2018 at 03:12:30.
   See the <a href="https://ncatlab.org/nlab/history/Adj" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Adj" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Adj/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Adj" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Adj" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Adj" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Adj/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Adj" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Adj" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/Adj/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
