--- a/pages/2055.html
+++ b/pages/2055.html
@@ -550,7 +550,32 @@ margin-left: 0em;
 </div>
 
 <h1 id="math_blogs_and_wikis">Math blogs and wikis</h1>
-<div class="maruku_toc"><ul><li><a href="#mathematics_2">Mathematics</a><ul><li><a href="#wikis_and_online_encyclopaedias">Wikis and online encyclopaedias</a></li><li><a href="#forums">Forums</a></li><li><a href="#current_blogs">Current Blogs</a></li><li><a href="#older_blogs_last_is_entry_over_a_year_old">Older Blogs (last is entry over a year old)</a></li></ul></li><li><a href="#probability_and_statistics">Probability and Statistics</a><ul><li><a href="#blogs">Blogs</a></li><li><a href="#wikis">Wikis</a></li></ul></li><li><a href="#theoretical_computer_science">Theoretical Computer Science</a><ul><li><a href="#blogs_2">Blogs</a></li></ul></li><li><a href="#mathrelated">Math-related</a><ul><li><a href="#blogs_3">Blogs</a></li></ul></li><li><a href="#technical_help_with_math_blogs">Technical help with math blogs</a></li></ul></div>
+<div class='maruku_toc'>
+<ul>
+<li><a href='#mathematics_2'>Mathematics</a></li>
+<ul>
+<li><a href='#wikis_and_online_encyclopaedias'>Wikis and online encyclopaedias</a></li>
+<li><a href='#forums'>Forums</a></li>
+<li><a href='#current_blogs'>Current Blogs</a></li>
+<li><a href='#older_blogs_last_is_entry_over_a_year_old'>Older Blogs (last is entry over a year old)</a></li>
+</ul>
+<li><a href='#probability_and_statistics'>Probability and Statistics</a></li>
+<ul>
+<li><a href='#blogs'>Blogs</a></li>
+<li><a href='#wikis'>Wikis</a></li>
+</ul>
+<li><a href='#theoretical_computer_science'>Theoretical Computer Science</a></li>
+<ul>
+<li><a href='#blogs_2'>Blogs</a></li>
+</ul>
+<li><a href='#mathrelated'>Math-related</a></li>
+<ul>
+<li><a href='#blogs_3'>Blogs</a></li>
+</ul>
+<li><a href='#technical_help_with_math_blogs'>Technical help with math blogs</a></li>
+</ul>
+</div>
+
 <h2 id="mathematics_2">Mathematics</h2>
 
 <h3 id="wikis_and_online_encyclopaedias">Wikis and online encyclopaedias</h3>
@@ -713,6 +738,10 @@ margin-left: 0em;
 </li>
 
 <li>
+<p>“blog on math blogs” <a href="https://blogs.ams.org/blogonmathblogs">https://blogs.ams.org/blogonmathblogs</a></p>
+</li>
+
+<li>
 <p><a href="http://community.livejournal.com/category_theory">category theory</a> at community.livejournal (in Russian)</p>
 </li>
 
@@ -798,6 +827,10 @@ margin-left: 0em;
 
 <li>
 <p><a href="http://gowers.wordpress.com">Gowers’s weblog</a></p>
+</li>
+
+<li>
+<p><a href="https://thehighergeometer.wordpress.com">theHigherGeometer</a> by David Roberts</p>
 </li>
 
 <li>
@@ -1290,20 +1323,20 @@ margin-left: 0em;
 <p><a href="http://watchmath.com/vlog/?p=438">LaTeX on Blogger</a> for installing LaTeX on Blogger.</p>
 </li>
 </ul>
-<div class="property">category: <a class="category_link" href="/nlab/all_pages/meta">meta</a><a class="category_link" href="/nlab/all_pages/references">references</a></div></body></html>
+<div class="property">category: <a class="category_link" href="/nlab/all_pages/meta">meta</a>, <a class="category_link" href="/nlab/all_pages/references">references</a></div></body></html>
 
 </div>
 
 <div class="revisedby">
   <p>
-  Last revised on September  6, 2018 at 04:51:48.
+  Last revised on September 28, 2018 at 06:49:34.
   See the <a href="https://ncatlab.org/nlab/history/math blogs" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/math+blogs" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/math+blogs/164" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(164 revisions)</span> | <a href="/nlab/show/diff/math+blogs" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/math+blogs" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/math+blogs" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/math+blogs/165" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(165 revisions)</span> | <a href="/nlab/show/diff/math+blogs" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/math+blogs" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/math blogs/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
