--- a/pages/3485.html
+++ b/pages/3485.html
@@ -258,8 +258,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -689,7 +689,7 @@ margin-left: 0em;
   A(G) \overset{ \beta = K(k[-]) }{\longrightarrow} R(G)
 
 </annotation></semantics></math></div>
-<p>from Def. <a class="maruku-ref" href="#ComparisonMapBurnsideRingRepresentationRing"></a>, which sends <a class="existingWikiWord" href="/nlab/show/Burnside+ring">virtual G-sets</a> to <a class="existingWikiWord" href="/nlab/show/representation+ring">virtual linear G-representations</a>,</p>
+<p>from Def. <a class="maruku-ref" href="#ComparisonMapBurnsideRingRepresentationRing"></a>, which sends <a class="existingWikiWord" href="/nlab/show/Burnside+ring">virtual G-sets</a> to their permutation rep <a class="existingWikiWord" href="/nlab/show/representation+ring">virtual linear G-representations</a>,</p>
 
 <ol>
 <li>
@@ -971,14 +971,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 28, 2018 at 10:23:48.
+  Last revised on September 28, 2018 at 13:51:35.
   See the <a href="https://ncatlab.org/nlab/history/permutation representation" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/27" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(27 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/permutation+representation" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/permutation+representation/28" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(28 revisions)</span> | <a href="/nlab/show/diff/permutation+representation" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/permutation+representation" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/permutation representation/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
