--- a/pages/19469.html
+++ b/pages/19469.html
@@ -519,7 +519,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p>The inclusion of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Mnd</mi></mrow><annotation encoding="application/x-tex">Mnd</annotation></semantics></math>, the free monad, in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Adj</mi></mrow><annotation encoding="application/x-tex">Adj</annotation></semantics></math> induces a 2-functor from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>Adj</mi><mo>,</mo><mi>K</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[Adj,K]</annotation></semantics></math> to the 2-category <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>Mnd</mi><mo>,</mo><mi>K</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[Mnd,K]</annotation></semantics></math> of monads in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>. The adjoints to this 2-functor are the <a class="existingWikiWord" href="/nlab/show/Kleisli+category">Kleisli</a> and <a class="existingWikiWord" href="/nlab/show/Eilenberg-Moore+category">Eilenberg-Moore</a> constructions on monads in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>.</p>
+<p>The inclusion of <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Mnd</mi></mrow><annotation encoding="application/x-tex">Mnd</annotation></semantics></math>, the free monad, in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>Adj</mi></mrow><annotation encoding="application/x-tex">Adj</annotation></semantics></math> induces a 2-functor from <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>Adj</mi><mo>,</mo><mi>K</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[Adj,K]</annotation></semantics></math> to <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mo stretchy="false">[</mo><mi>Mnd</mi><mo>,</mo><mi>K</mi><mo stretchy="false">]</mo></mrow><annotation encoding="application/x-tex">[Mnd,K]</annotation></semantics></math>, the <a href="monad#the_bicategory_of_monads">2-category of monads</a> in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>. The adjoints to this 2-functor are the <a class="existingWikiWord" href="/nlab/show/Kleisli+category">Kleisli</a> and <a class="existingWikiWord" href="/nlab/show/Eilenberg-Moore+category">Eilenberg-Moore</a> constructions on monads in <math xmlns="http://www.w3.org/1998/Math/MathML" display="inline" class="maruku-mathml"><semantics><mrow><mi>K</mi></mrow><annotation encoding="application/x-tex">K</annotation></semantics></math>.</p>
 </li>
 </ul>
 </body></html>
@@ -528,14 +528,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on September 27, 2018 at 14:19:15.
+  Last revised on September 29, 2018 at 03:46:17.
   See the <a href="https://ncatlab.org/nlab/history/2-category of adjunctions" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/2-category+of+adjunctions" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/2-category+of+adjunctions/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/2-category+of+adjunctions" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/2-category+of+adjunctions" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/2-category+of+adjunctions" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/2-category+of+adjunctions/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/2-category+of+adjunctions" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/2-category+of+adjunctions" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/2-category of adjunctions/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
